# zentinel-agent-mock-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
examples/: default-config.yaml
src/: agent.rs  config.rs  lib.rs  main.rs  matcher.rs  template.rs
