[package]
name = "zentinel-agent-mock-server"
version = "0.2.0"
edition = "2021"
authors = ["Raskell <hello@raskell.io>"]
description = "Mock server agent for Zentinel proxy - request stubbing, response templates, and failure simulation"
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-mock-server"
keywords = ["zentinel", "proxy", "agent", "mock", "testing"]
categories = ["network-programming", "development-tools::testing"]
readme = "README.md"

[dependencies]
# Using local path for development until 0.2 is published to crates.io
zentinel-agent-sdk = { path = "../zentinel-agent-rust-sdk", features = ["v2"] }
# Direct access to protocol types for metrics
zentinel-agent-protocol = { version = "0.5", git = "https://github.com/zentinelproxy/zentinel.git", package = "zentinel-agent-protocol" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Regex for request matching
regex = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Template engine for dynamic responses
handlebars = "6"

# Random for latency jitter
rand = "0.8"

# Base64 encoding for binary responses
base64 = "0.22"

# Time handling
chrono = "0.4"

# Glob pattern matching
globset = "0.4"

# JSON path for body matching
jsonpath-rust = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "zentinel-agent-mock-server"
path = "src/main.rs"

[lib]
name = "zentinel_agent_mock_server"
path = "src/lib.rs"
